test/cli/test-deleting-policy/use-resource-lib-fail/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: default
spec:
  containers:
    - name: example
      image: nginx:latest
