test/cli/test-deleting-policy/use-resource-lib-fail/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
context: context.yaml
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resource.yaml
results:
- isDeletingPolicy: true
  kind: Pod
  policy: dpol-resource-lib-check
  resources:
  - example
  result: fail
